<resources>
    <string name="app_name">Journal App</string>
    <string name="action_settings">Settings</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="title_activity_journal_entry_details">JournalEntryDetailsActivity</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="body">Body</string>
    <string name="note_it">Keet It Here</string>
    <string name="fill_all_information">Enter full informaiton</string>
    <string name="save">Save</string>
</resources>
